refactor(auth): 重构认证服务并优化网关过滤器
- 修改认证接口为 GET 请求，移除 TokenValidateRequest 类
- 优化 AuthGlobalFilter 类，改进日志记录和错误处理
- 删除 PreAuthorizetestcontroller 类
- 新增 Spring Security 与 Spring Cloud Gateway 整合文档