@@ -1,26 +1,26 @@
 package com.david.filter;
 
-import com.david.entity.token.TokenValidateRequest;
-import com.david.entity.user.AuthUser;
 import com.david.interfaces.AuthFeignClient;
+import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
 import org.springframework.cloud.gateway.filter.GlobalFilter;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.core.Ordered;
-import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
 
-import java.util.Arrays;
-import java.util.Collection;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -31,121 +31,133 @@ import java.util.stream.Collectors;
 @Slf4j
 @Component
 public class AuthGlobalFilter implements GlobalFilter, Ordered {
+    // 常量定义
+    private static final String BEARER_PREFIX = "Bearer ";
+    private static final int BEARER_PREFIX_LENGTH = BEARER_PREFIX.length();
+    private static final String CONTENT_TYPE_JSON = "application/json;charset=UTF-8";
+    private static final int HIGHEST_PRECEDENCE = -100;
+
+    // 请求头常量
+    private static final String HEADER_AUTHORIZATION = HttpHeaders.AUTHORIZATION;
+    private static final String HEADER_USER_ID = "X-User-Id";
+    private static final String HEADER_USER_NAME = "X-User-Name";
+    private static final String HEADER_USER_EMAIL = "X-User-Email";
+    private static final String HEADER_USER_ROLES = "X-User-Roles";
+    private static final String HEADER_USER_AUTHORITIES = "X-User-Authorities";
+
+    // 默认值
+    private static final String DEFAULT_ROLE = "USER";
+    private static final String EMPTY_STRING = "";
 
     /**
      * 公开路径，无需权限验证
      */
-    private final List<String> publicPaths = Arrays.asList(
+    private static final List<String> PUBLIC_PATHS = List.of(
             "/api/auth/login",
             "/api/auth/register",
             "/api/auth/refresh",
             "/actuator/health",
             "/favicon.ico");
-    @Autowired
+
     @Lazy
+    @Resource
     private AuthFeignClient authFeignClient;
 
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
         ServerHttpRequest request = exchange.getRequest();
-        ServerHttpResponse response = exchange.getResponse();
-
         String path = request.getURI().getPath();
-        log.info("Gateway 处理请求: {} {}", request.getMethod(), path);
 
-        // 检查是否为公开路径
-        if (isPublicPath(path)) {
-            log.info("公开路径，直接放行: {}", path);
+        // 1. 记录请求信息
+        if (log.isInfoEnabled()) {
+            log.info("处理请求: {} {}", request.getMethod(), path);
+        }
+
+        // 2. 检查是否为公开路径
+        if (PUBLIC_PATHS.stream().anyMatch(path::startsWith)) {
+            log.debug("公开路径，直接放行: {}", path);
             return chain.filter(exchange);
         }
 
-        // 获取 Authorization 头
-        String authHeader = request.getHeaders().getFirst("Authorization");
-
-        if (!StringUtils.hasText(authHeader) || !authHeader.startsWith("Bearer ")) {
-            log.warn("请求缺少有效的 Authorization 头: {}", path);
-            return handleUnauthorized(response, "缺少有效的认证令牌");
+        // 3. 验证认证头
+        String authHeader = request.getHeaders().getFirst(HEADER_AUTHORIZATION);
+        if (!StringUtils.hasText(authHeader) || !authHeader.startsWith(BEARER_PREFIX)) {
+            log.warn("请求缺少有效的 Authorization 头");
+            return handleUnauthorized(exchange.getResponse(), "缺少有效的认证令牌");
         }
 
-        // 提取 token
-        String token = authHeader.substring(7);
+        // 4. 提取令牌
+        String token = authHeader.substring(BEARER_PREFIX_LENGTH).trim();
 
-        // 使用响应式方式调用认证服务，避免阻塞操作
+        // 5. 异步调用认证服务验证令牌
         return Mono.fromCallable(() -> {
-                    try {
-                        // 调用认证服务验证 token
-                        return authFeignClient.loadUserByUsername(TokenValidateRequest.builder().token(token).build()).getData();
-                    } catch (Exception e) {
-                        log.error("认证服务调用异常: {}", e.getMessage(), e);
-                        throw new RuntimeException("认证服务异常: " + e.getMessage(), e);
-                    }
-                })
-                .subscribeOn(reactor.core.scheduler.Schedulers.boundedElastic()) // 在弹性线程池中执行阻塞操作
-                .flatMap(authUser -> {
-                    if (authUser == null) {
-                        log.warn("认证服务返回空结果，token: {}", token);
-                        return handleUnauthorized(response, "认证失败");
-                    }
+            try {
+                return authFeignClient.loadUserByUsername(token).getData();
+            } catch (Exception e) {
+                log.error("认证服务调用异常: {}", e.getMessage(), e);
+                throw new RuntimeException("认证服务异常: " + e.getMessage(), e);
+            }
+        })
+        .subscribeOn(Schedulers.boundedElastic())
+        .flatMap(authUser -> {
+            // 6. 处理认证结果
+            if (authUser == null) {
+                log.warn("认证服务返回空结果");
+                return handleUnauthorized(exchange.getResponse(), "认证失败");
+            }
 
-                    log.info("用户认证成功: {} (ID: {})", authUser.getUsername(), authUser.getUserId());
+            // 7. 记录认证成功日志
+            if (log.isInfoEnabled()) {
+                log.info("用户认证成功: {}", authUser);
+            }
 
-                    // 将用户信息添加到请求头中，传递给下游服务
-                    ServerHttpRequest mutatedRequest = request.mutate()
-                            .header("X-User-Id", String.valueOf(authUser.getUserId()))
-                            .header("X-User-Name", authUser.getUsername())
-                            .header("X-User-Email", authUser.getEmail() != null ? authUser.getEmail() : "")
-                            .header("X-User-Roles", authUser.getRole() != null ? authUser.getRole().getRoleName() : "USER")
-                            .header("X-User-Authorities", serializeAuthorities(authUser.getAuthorities()))
-                            .build();
+            // 8. 添加用户信息到请求头
+            String roleName = authUser.getRole() != null ? authUser.getRole().getRoleName() : DEFAULT_ROLE;
+            String authorities = authUser.getAuthorities().stream()
+                    .map(GrantedAuthority::getAuthority)
+                    .collect(Collectors.joining(","));
 
-                    // 创建新的 exchange 并继续处理
-                    ServerWebExchange mutatedExchange = exchange.mutate()
-                            .request(mutatedRequest)
-                            .build();
+            ServerHttpRequest mutatedRequest = exchange.getRequest().mutate()
+                    .header(HEADER_USER_ID, String.valueOf(authUser.getUserId()))
+                    .header(HEADER_USER_NAME, Objects.toString(authUser.getUsername(), EMPTY_STRING))
+                    .header(HEADER_USER_EMAIL, Objects.toString(authUser.getEmail(), EMPTY_STRING))
+                    .header(HEADER_USER_ROLES, roleName)
+                    .header(HEADER_USER_AUTHORITIES, authorities)
+                    .build();
 
-                    return chain.filter(mutatedExchange);
-                })
-                .onErrorResume(throwable -> {
-                    log.error("认证过程中发生异常: {}", throwable.getMessage(), throwable);
-                    return handleUnauthorized(response, "认证服务异常: " + throwable.getMessage());
-                });
-    }
-
-    /**
-     * 检查是否为公开路径
-     */
-    private boolean isPublicPath(String path) {
-        return publicPaths.stream().anyMatch(path::startsWith);
+            // 9. 继续处理请求
+            return chain.filter(exchange.mutate().request(mutatedRequest).build());
+        })
+        .onErrorResume(throwable -> {
+            // 10. 处理认证过程中的错误
+            log.error("认证过程中发生异常: {}", throwable.getMessage(), throwable);
+            return handleUnauthorized(exchange.getResponse(),
+                    "认证服务异常: " + throwable.getMessage());
+        });
     }
 
     /**
      * 处理未授权请求
+     *
+     * @param response HTTP 响应对象
+     * @param message  错误消息
+     * @return 包含错误响应的 Mono 对象
      */
     private Mono<Void> handleUnauthorized(ServerHttpResponse response, String message) {
         response.setStatusCode(HttpStatus.UNAUTHORIZED);
-        response.getHeaders().add("Content-Type", "application/json;charset=UTF-8");
+        response.getHeaders().add(HttpHeaders.CONTENT_TYPE, CONTENT_TYPE_JSON);
 
-        String body = String.format("{\"code\": 401, \"message\": \"%s\", \"data\": null}", message);
-        return response.writeWith(Mono.just(response.bufferFactory().wrap(body.getBytes())));
+        String jsonResponse = String.format(
+                "{\"code\": %d, \"message\": \"%s\", \"data\": null}",
+                HttpStatus.UNAUTHORIZED.value(),
+                message);
+
+        return response.writeWith(
+                Mono.just(response.bufferFactory().wrap(jsonResponse.getBytes(StandardCharsets.UTF_8))));
     }
 
     @Override
     public int getOrder() {
-        // 设置较高优先级，确保在其他过滤器之前执行
-        return -100;
-    }
-
-    /**
-     * 序列化权限集合为字符串
-     */
-    private String serializeAuthorities(Collection<? extends GrantedAuthority> authorities) {
-        if (authorities == null || authorities.isEmpty()) {
-            return "";
-        }
-
-        return authorities.stream()
-                .map(GrantedAuthority::getAuthority)
-                .filter(auth -> auth != null && !auth.isEmpty())
-                .collect(Collectors.joining(","));
+        return HIGHEST_PRECEDENCE;
     }
 }
